--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
+
+<!-- Siempre es necesario revisar la sintaxis de la hoja de estilos así para desplegar correctamente en GitHub ->  ./style.css -->
 
 <!-- Si se agrega la etiqueta de <p> al <div> se añadirá un margen por defecto. En esté ejemplo se cambió a la etiqueta de ancla <a href>-->
 
